and keep track of all category-tags.
It DOES NOT substitute the  SVN log-message one should put at every
committal in the SVN repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

March 13, 2015 I. Hrivnacova (analysis-V10-00-42)
- Fixed G4AnalysisManager::IsActive() - now taken into all Hn & Pn
  managers

February 04, 2015 I. Hrivnacova
- Updated to g4tools 1.17.1 (Guy Barrand):
  Fixed resetting histograms;
  see History_tools for the complete list of modifications.

January 21, 2015 I. Hrivnacova
- Updated to g4tools 1.17.0 (Guy Barrand):
  Fixes in the Root files output to be compatible with ROOT 6.02/x;
  see History_tools for the complete list of modifications.

December 5, 2014 G. Cosmo
- Corrected csv/sources.cmake to include missing file:
    G4CsvAnalysisReader.icc

November 24, 2014 I. Hrivnacova (analysis-V10-00-41)
- Fixed update to g4tools 1.16.3:
  the update of g4tools/src/csz_inflate.cc with Coverity fix 
  was missing

November 07, 2014 I. Hrivnacova
- Fixed createH2/setH2 commands implementation
  (was missing in the previous tag V09-06-32)

November 06, 2014 I. Hrivnacova (analysis-V10-00-40)
- Fixed Coverity defect also in Csv, Root ntuple and Xml rntuple managers

November 05, 2014 I. Hrivnacova (analysis-V10-00-39)
- Fixed Coverity defect in G4XmlNtupleManager

October 27, 2014 I. Hrivnacova (analysis-V10-00-38)
- Revised (and simplified) numbering of warnings in exception messages 

October 25, 2014 I. Hrivnacova (analysis-V10-00-37)
- Updated to g4tools 1.16.3 (by G. Barrand):
  Fixed problem with csv reading on windows;
  see History_tools for complete list of modifications.

October 22, 2014 I. Hrivnacova (analysis-V10-00-36)
- Updated to g4tools 1.16.2 (by G. Barrand):
  modifs for example code to read csv ntuple by using ntuple_binding  